# bot

./: .dockerignore  .env.dist  .flake8  .gitignore  .isort.cfg  Dockerfile  LICENSE  Makefile  Pipfile  README.md  docker-compose.dev.yml  docker-compose.stack.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: dockerimage.yml
aiogram_bot/: __main__.py  config.py  misc.py
aiogram_bot/filters/: __init__.py  chat_property.py  contains_bot_token.py  has_permissions.py  superuser.py
aiogram_bot/handlers/: __init__.py  base.py  channel_filter.py  chat_settings.py  hastebin.py  new_chat_members.py  simple_admin.py  superuser.py  token_finder.py
aiogram_bot/middlewares/: __init__.py  acl.py  i18n.py
aiogram_bot/models/: base.py  chat.py  db.py  user.py
aiogram_bot/services/: apscheduller.py  hastebin.py  healthcheck.py  join_list.py
aiogram_bot/utils/: before_start.py  chat_admin.py  chat_settings.py  cli.py  executor.py  logging.py  redis.py  superuser.py  timedelta.py
app/: __main__.py  config.py
app/filters/: is_reply.py  superuser.py
app/handlers/: __init__.py  base.py  chat_settings.py  new_chat_members.py  simple_admin.py  superuser.py
app/middlewares/: i18n.py
app/models/: base.py  blacklist_word.py  db.py
app/services/: apscheduller.py
app/utils/: before_start.py  chat_admin.py  chat_settings.py  executor.py  superuser.py  words_blacklist.py
locales/: bot.pot
migrations/: env.py
migrations/versions/: 2cdcb2a2c589_chat_settings_and_user_conversation_flag.py  41a1d247765f_add_blacklisted_words.py  4201ee77de3d_add_user_and_chat_models.py  4c0d7a22344e_add_chat_type_column.py  57bc88e06e52_rename_superuser_column_and_add_is_.py  9d333f105ea0_added_additional_chat_settings.py  c639acad707a_added_settings_for_channel_messages.py  c7025892455f_add_superuser_column.py  e0d427aae93e_update_user_id_to_int64.py
scripts/: compileTexts.sh  createTexts.sh  docker-entrypoint.sh  exportTexts.sh  lint.sh
src/: alembic.ini  before_start.py
src/app/: __main__.py  cli.py  (+2 more)
(+43 files in other folders)
