[tool.poetry]
name = "aiogram_bot"
version = "0.1.0"
description = ""
authors = ["Alex Root Junior <jroot.junior@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.17.1"
click = "^8.0.1"
loguru = "^0.5.3"
uvloop = "^0.16.0"
aiohttp = "^3.7.4"
envparse = "^0.2.0"
SQLAlchemy = "1.3.24"
SQLAlchemy-Utils = "^0.37.8"
psycopg2-binary = "^2.9.1"
asyncpg = "^0.24.0"
gino = "0.8.3"
alembic = "^1.6.5"
aioredis = "1.3"
redis = "^3.5.3"
aiohttp_healthcheck = "^1.3.1"
requests = "^2.26.0"
APScheduler = "^3.7.0"
tenacity = "^8.0.1"
sentry-sdk = "^1.5.0"
magic-filter = "^1.0.4"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.3"
flake8 = "^3.9.2"
ipython = "^7.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | venv
  | build
  | dist
)/
'''
